# nexus-downloader

./: .gitignore  .prettierignore  .prettierrc.yml  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.ts  preview.tsx
src/: App.tsx  InitialScreen.tsx  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Button.stories.tsx  Button.tsx  ExternalLink.tsx  InputField.stories.tsx  InputField.tsx  Toggle.stories.tsx  Toggle.tsx
src/context/: index.tsx  selectors.ts
src/layout/: AppFooter.tsx  AppLayout.tsx  AppNav.tsx
src/routes/: FirstRun.tsx  index.tsx
src/routes/mods/: index.tsx
src/routes/settings/: SettingsForm.tsx  index.tsx
src/settings/: SettingsModal.tsx  index.ts  migrations.ts  types.ts
src/startup/: InitialSetup.tsx  index.tsx
src/themes/: ThemeContainer.tsx  ThemeInit.tsx
src/ui/: state.ts
src/utils/: helpers.ts
